# NaomiHook

./: .gitignore  CMakeLists.txt  Config.hpp.in  README.md  build_vs2022_release_shipping.bat  create_mod.sh
dependencies/: CMakeLists.txt
dependencies/imgui/: imconfig.h  imgui.cpp
misc/: TexturePackerConstexprTemplate.mustache
misc/shaders/: color_tex0_fxaa.hlsl  color_tex0_msaa.hlsl  compile_command.txt
src/: CMakeLists.txt  D3D11Hook.cpp  D3D11Hook.hpp  Fonts.cpp  Fonts.hpp  GuiFunctions.cpp  GuiFunctions.hpp  ImageViewer.cpp  ImageViewer.hpp  LicenseStrings.hpp  Main.cpp  Mod.cpp  Mod.hpp  ModFramework.cpp  ModFramework.hpp  Mods.cpp  Mods.hpp
src/fw-imgui/: FontFancy.cpp  FontInfoblock.cpp  FontMain.cpp  FontTony.cpp  KanaeTextureAtlas.cpp  SwordSwitchAtlas.cpp  SwordsTextureAtlas.cpp  Texture2DD3D11.cpp  Texture2DD3D11.hpp
src/mods/: AcceptPadInputsTabbedOut.cpp  AcceptPadInputsTabbedOut.hpp  AnimPlayer.cpp  AnimPlayer.hpp  ArcadeMode.cpp  ArcadeMode.hpp  BeamColor.cpp  BeamColor.hpp  BrainAge.cpp  BrainAge.hpp  CameraSettings.cpp  CameraSettings.hpp  ChargeSubsBattery.cpp  ChargeSubsBattery.hpp  Cheats.cpp  Cheats.hpp  ClothesSwitcher.cpp  ClothesSwitcher.hpp  DebugText.cpp  DebugText.hpp  DisableCrashDumps.cpp  DisableCrashDumps.hpp  DisableMouse.cpp  DisableMouse.hpp  DodgeBattery.cpp  DodgeBattery.hpp  DodgeSettings.cpp  DodgeSettings.hpp  EnemySpawn.cpp  EnemySpawn.hpp  EnemyTracker.cpp  EnemyTracker.hpp  ForceFOV.cpp  ForceFOV.hpp  FreeCam.cpp  FreeCam.hpp  GameplayFixes.cpp  GameplayFixes.hpp  HPHitNumber.cpp  HPHitNumber.hpp  (+64 more)
src/sdk/: ReClass.hpp  ReClass_Internal.hpp  nmh.cpp  nmh.hpp
src/utility/: ExceptionHandler.cpp  Input.cpp  Keyboard.cpp  Mouse.cpp  TextureAtlas.cpp
